# 2026-web-app-template

./: .env  .gitignore  Dockerfile  GEMINI.md  README.md  compose.yaml  index.css  instructions.md  main.py  pyproject.toml  requirements.txt
tests/: test_main.py
